2.0b3
- Allow users to use bbcodes with numbers
- Rename !overwrite to !seen
- Sort results so that most seen films comes first

2.0b2.1
- Remove hardcoded forum url

2.0b2
- Add support for setting an end time for each thread
- Add support for changing end time on-the-fly

2.0b1
- Support for multiple threads
- Move variables fomr config.ini to JSON storage
- Add datetime to output
- Display total number of pages when querying a page
- When debug mode is enabled all posts in each thread will be fetched
- Display how many threads there's still left to query
- Make long and short delay configurable
- Add support for removing threads on-the-fly

1.0.3
- Fetch and display thread title

1.0.2
- Only save data when not in debug mode
- Show a message if there's no new updates
- Only update the first post if there's new updates

1.0.1
- Show a message when the first post is updated

1.0
- Initial release